--- a/scss/partials/_homepage.scss
+++ b/scss/partials/_homepage.scss
@@ -1,15 +1,7 @@
 .first-quote {
-  height: 80vh;
   display: flex;
-  align-items: center;
-}
-
-.middle-quote {
-  width: 50%;
+  flex-direction: column;
   color: white;
-  display: block;
-  align-items: center;
-  margin-left: 8%;
 }
 
 .world-text {
@@ -17,7 +9,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
   margin-bottom: 30px;
-  font-size: 81px;
+  font-size: 70px;
   font-weight: bold;
 }
 
@@ -26,14 +18,10 @@
 }
 
 .back-img {
-  background-image: url(/img/header-background.png);
+  background-image: url(../../img/background-img.png);
   background-size: cover;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  width: 100vw;
+  height: 100vh;
 }
 
 .nextline {
@@ -41,8 +29,23 @@
 }
 
 .btn-danger {
+  width: 180px;
+  height: 55px;
   border-radius: 30px;
   background-color: rgba(255, 92, 99, 0.16);
   color: hsl(0, 100%, 50%);
   margin-top: 30px;
+  text-transform: uppercase;
+}
+
+.hero {
+  display: flex;
+  margin-top: 150px;
+  align-items: flex-end;
+}
+
+.hero-icons {
+  color: red;
+  display: flex;
+  flex-direction: column;
 }
