--- a/css/style.css
+++ b/css/style.css
@@ -92,23 +92,14 @@ header {
 }
 
 .first-quote {
-  height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.middle-quote {
-  width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   color: white;
-  display: block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 8%;
 }
 
 .world-text {
@@ -116,7 +107,7 @@ header {
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
   margin-bottom: 30px;
-  font-size: 81px;
+  font-size: 70px;
   font-weight: bold;
 }
 
@@ -125,14 +116,10 @@ header {
 }
 
 .back-img {
-  background-image: url(/img/header-background.png);
+  background-image: url(../../img/background-img.png);
   background-size: cover;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  width: 100vw;
+  height: 100vh;
 }
 
 .nextline {
@@ -140,9 +127,58 @@ header {
 }
 
 .btn-danger {
+  width: 180px;
+  height: 55px;
   border-radius: 30px;
   background-color: rgba(255, 92, 99, 0.16);
   color: red;
   margin-top: 30px;
+  text-transform: uppercase;
+}
+
+.hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 150px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.hero-icons {
+  color: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.col-sm-4,
+.col-sm-8 {
+  display: block;
+}
+
+.vid-small-text {
+  font-family: "Montserrat", sans-serif;
+}
+
+.vid-big-text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  font-size: 40px;
+  width: 40%;
+  margin-bottom: 50px;
+}
+
+.board1,
+.board2,
+.board3,
+.board4 {
+  border: 2px solid hotpink;
+  background-image: url(../../img/board1.png);
 }
 /*# sourceMappingURL=style.css.map */
