--- a/scss/partials/_homepage.scss
+++ b/scss/partials/_homepage.scss
@@ -49,3 +49,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.fa-google,
+.fa-twitter,
+.fa-facebook-f {
+  margin-top: 60px;
+  font-size: 3rem;
+}
