--- a/scss/partials/_vidpage.scss
+++ b/scss/partials/_vidpage.scss
@@ -1,8 +1,3 @@
-.col-sm-4,
-.col-sm-8 {
-  display: block;
-}
-
 .vid-small-text {
   font-family: "Montserrat", sans-serif;
 }
@@ -15,9 +10,41 @@
   margin-bottom: 50px;
 }
 
-.board1 {
-  border: 2px solid hotpink;
-  background-image: url(../../img/board1.png);
-  height: 100%;
+.board1,
+.board2,
+.board3,
+.board4 {
+  height: 400px;
   width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 1rem;
+}
+
+.board1 {
+  background-image: url(../../img/board1.png);
+}
+
+.board2 {
+  background-image: url(../../img/board2.png);
+}
+
+.board3 {
+  background-image: url(../../img/board3.png);
+}
+
+.board4 {
+  background-image: url(../../img/board4.png);
+}
+
+.board1-maintext,
+.board1-subtext {
+  color: white;
+}
+
+.textholder1 {
+  border: 2px solid hotpink;
+  height: 400px;
+  width: 50%;
 }
