--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,6 @@ header {
   font-weight: bolder;
   margin-bottom: 30px;
   font-size: 70px;
-  font-weight: bold;
 }
 
 .red {
@@ -186,6 +185,30 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   margin-top: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.playbutton {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .board1 {
@@ -204,14 +227,58 @@ header {
   background-image: url(../../img/board4.png);
 }
 
-.board1-maintext,
-.board1-subtext {
+.vid-maintext,
+.vid-subtext {
   color: white;
 }
 
-.textholder1 {
-  border: 2px solid hotpink;
-  height: 400px;
-  width: 50%;
+.textholder {
+  margin: 50px 0px 40px 40px;
+  width: 100%;
+}
+
+.alarm-page {
+  background-image: url(../../img/alarm-background.png);
+  background-size: cover;
+  width: 100vw;
+  height: 1200px;
+  margin-top: 100px;
+}
+
+.alarm_topdiv {
+  width: 100%;
+}
+
+.alarm_toptext {
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+}
+
+.alarm_maintext {
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  font-size: 3rem;
+}
+
+.alarm_box {
+  height: 300px;
+  width: 500px;
+  border-radius: 40px;
+  background-color: white;
+  margin: auto;
+  margin-top: 200px;
+}
+
+.smartsensor {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  padding: 30px 0px 0px 50px;
+}
+
+.sensortext {
+  font-family: "Montserrat", sans-serif;
+  padding: 0px 0px 50px 50px;
 }
 /*# sourceMappingURL=style.css.map */
