--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,5 @@
 @import "partials/homepage";
 @import "partials/vidpage";
 @import "partials/alarmpage";
+@import "partials/redhouse";
+@import "partials/protectionplans";
