--- a/css/style.css
+++ b/css/style.css
@@ -100,14 +100,21 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   color: white;
+  width: 100%;
 }
 
 .world-text {
   color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
-  margin-bottom: 30px;
+  margin-top: 170px;
   font-size: 70px;
+}
+
+.nextline {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .red {
@@ -119,10 +126,6 @@ header {
   background-size: cover;
   width: 100vw;
   height: 100vh;
-}
-
-.nextline {
-  display: block;
 }
 
 .btn-danger {
@@ -139,7 +142,7 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 150px;
+  margin-top: 100px;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
@@ -232,6 +235,17 @@ header {
   color: white;
 }
 
+.vidtext1 {
+  margin-top: 50px;
+  color: lightgray;
+}
+
+.vidtext2 {
+  font-size: 2rem;
+  width: 30%;
+  font-family: "Montserrat", sans-serif;
+}
+
 .textholder {
   margin: 50px 0px 40px 40px;
   width: 100%;
@@ -280,5 +294,47 @@ header {
 .sensortext {
   font-family: "Montserrat", sans-serif;
   padding: 0px 0px 50px 50px;
+}
+
+.redhouse-bcg {
+  background-image: url(../../img/redhouse-bcg.png);
+  width: 100vw;
+  height: 100vh;
+}
+
+.red_small_text,
+.red_main_text,
+.red_long_text {
+  margin-top: 20px;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
+.red_main_text {
+  font-size: 3rem;
+}
+
+.redpic {
+  margin: 10px 20px 20px 10px;
+}
+
+.red_bottom {
+  width: 50%;
+}
+
+.protection_header_div {
+  margin-top: 50px;
+  width: 100%;
+}
+
+.protection_head {
+  text-align: center;
+  height: 100px;
+  width: 100%;
+}
+
+.form-check-input {
+  margin: auto;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
