--- a/scss/partials/_homepage.scss
+++ b/scss/partials/_homepage.scss
@@ -2,14 +2,19 @@
   display: flex;
   flex-direction: column;
   color: white;
+  width: 100%;
 }
 
 .world-text {
   color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
-  margin-bottom: 30px;
+  margin-top: 170px;
   font-size: 70px;
+}
+
+.nextline {
+  display: flex;
 }
 
 .red {
@@ -21,10 +26,6 @@
   background-size: cover;
   width: 100vw;
   height: 100vh;
-}
-
-.nextline {
-  display: block;
 }
 
 .btn-danger {
@@ -39,7 +40,7 @@
 
 .hero {
   display: flex;
-  margin-top: 150px;
+  margin-top: 100px;
   align-items: flex-end;
 }
 
