--- a/scss/partials/_vidpage.scss
+++ b/scss/partials/_vidpage.scss
@@ -54,6 +54,17 @@
   color: white;
 }
 
+.vidtext1 {
+  margin-top: 50px;
+  color: lightgray;
+}
+
+.vidtext2 {
+  font-size: 2rem;
+  width: 30%;
+  font-family: "Montserrat", sans-serif;
+}
+
 .textholder {
   margin: 50px 0px 40px 40px;
   width: 100%;
