--- a/css/style.css
+++ b/css/style.css
@@ -265,13 +265,11 @@ header {
 
 .alarm_toptext {
   width: 100%;
-  font-family: "Montserrat", sans-serif;
   text-align: center;
 }
 
 .alarm_maintext {
   width: 100%;
-  font-family: "Montserrat", sans-serif;
   text-align: center;
   font-size: 3rem;
 }
@@ -286,13 +284,11 @@ header {
 }
 
 .smartsensor {
-  font-family: "Montserrat", sans-serif;
   font-size: 2rem;
   padding: 30px 0px 0px 50px;
 }
 
 .sensortext {
-  font-family: "Montserrat", sans-serif;
   padding: 0px 0px 50px 50px;
 }
 
@@ -331,10 +327,77 @@ header {
   text-align: center;
   height: 100px;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
 }
 
 .form-check-input {
   margin: auto;
   width: 100%;
+}
+
+.switchbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  font-family: "Montserrat", sans-serif;
+}
+
+.form-switch .form-check-input {
+  background-image: url(../../img/reddot.png);
+  width: 50px;
+}
+
+.redcard_stars {
+  color: white;
+}
+
+.whitecard_stars {
+  color: red;
+}
+
+.whitecard {
+  height: 500px;
+  border-radius: 10px;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: -7px 8px 8px -5px rgba(0, 0, 0, 0.36);
+  -webkit-box-shadow: -7px 8px 8px -5px rgba(0, 0, 0, 0.36);
+  -moz-box-shadow: -7px 8px 8px -5px rgba(0, 0, 0, 0.36);
+}
+
+.whitecard__two {
+  height: 500px;
+  box-shadow: 17px 8px 8px -5px rgba(0, 0, 0, 0.36);
+  -webkit-box-shadow: 17px 8px 8px -5px rgba(0, 0, 0, 0.36);
+  -moz-box-shadow: 17px 8px 8px -5px rgba(0, 0, 0, 0.36);
+}
+
+.whitecard__top {
+  text-align: center;
+}
+
+.redcard {
+  font-family: "Montserrat", sans-serif;
+  min-height: 500px;
+  border-radius: 10px;
+  background-color: red;
+}
+
+.card_header {
+  margin-top: 30px;
+}
+
+.white_pricetag {
+  font-size: 2rem;
+}
+
+.checkmark {
+  color: red;
+}
+
+.whitecheckmark {
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
